Fixed display spacing

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 #calc-display {
     background-color: #1f335f;
-    min-height: 30px;
+    min-height: 36px;
     color: #e5e5e5;
     padding: 15px;
     border-radius: 20px;
